Merge CCT-1300 into main (#388)
* merge CCT-1300 into main branch

* rebase with main